Make dependencies in Gemfile relative paths

--- a/gumath/Gemfile
+++ b/gumath/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 gemspec
 
-gem 'ndtypes', path: "/home/sameer/gitrepos/plures-ruby/ndtypes"
-gem 'xnd', path: "/home/sameer/gitrepos/plures-ruby/xnd"
+gem 'ndtypes', path: File.expand_path("../../ndtypes", __FILE__)
+gem 'xnd', path: File.expand_path("../../xnd", __FILE__)
